[package]
name = "brstack"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
ethernet = { path = "../protocol/ethernet" }
net_common = { path = "../protocol/net_common" }
arp = { path = "../protocol/arp" }
ipv4 = { path = "../protocol/ipv4" }
icmp = { path = "../protocol/icmp" }
udp = { path = "../protocol/udp" }
if-addrs = "0.13.4"
log = "0.4.25"
env_logger = "0.11.6"
