[package]
name = "ethernet"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
socket2 =  {version="0.5.9",features=["all"]}
libc = "0"
tokio = { version = "1", features = ["full"] }
net_common = { path="../net_common" }
log = "0.4.25"
env_logger = "0.11.6"
if-addrs = "0.13.4"